--- a/express_app/myapp/views/landing.pug
+++ b/express_app/myapp/views/landing.pug
@@ -1,8 +1,33 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1  ND Course Scheduler
+  p by Sara Clarin and Josh Agron
+  style.
+      .flex-container {
+      display: flex;
+      }
+      .flex-child {
+      flex: 1;
+      border: 1px solid blue;
+      }
+      .flex-child:first-child {
+      margin-right: 20px;
+      }
+  body(style='background-color:lightblue;')
   form(action="/", method="POST")
     input(name = "lead_email", type="email", placeholder="Enter you email address: ")
-    button(type="submit") Submit
+    button(name='Originalbutton', type='button', style='margin: 16px; padding: 16px; background-color: darkblue; color: aliceblue; border: none;border-radius: 4px;font-size: 12px') Original Schedule 
+
+  button(name='TemplateButton', type='button', style='margin: 16px; padding: 16px; background-color: darkblue; color: aliceblue; border: none;border-radius: 4px;font-size: 12px') Schedule Template 
+                     
+  script(source='TopologicalSort.js').
+        
+  .flex-container
+    #templateArea.flex-child(name='templateArea')
+      | template area 1
+                  
+    #templateArea.flex-child(name='originalArea')
+      | template area 2
+
+  
