--- a/express_app/myapp/views/landing.pug
+++ b/express_app/myapp/views/landing.pug
@@ -1,5 +1,6 @@
 extends layout
 
+
 block content
   h1  ND Course Scheduler
   p by Sara Clarin and Josh Agron
@@ -21,10 +22,10 @@ block content
 
   button(name='TemplateButton', type='button', style='margin: 16px; padding: 16px; background-color: darkblue; color: aliceblue; border: none;border-radius: 4px;font-size: 12px') Schedule Template 
                      
-  script(source='TopologicalSort.js').
+  script(src='./template.js').
         
   .flex-container
-    #templateArea.flex-child(name='templateArea')
+    #templateArea.flex-child(name='templateArea' )
       | template area 1
                   
     #templateArea.flex-child(name='originalArea')
