--- a/express_app/myapp/views/landing.pug
+++ b/express_app/myapp/views/landing.pug
@@ -4,6 +4,7 @@ extends layout
 block content
   h1  ND Course Scheduler
   p by Sara Clarin and Josh Agron
+  hr(size= "6" color="black")
   style.
       .flex-container {
       display: flex;
@@ -16,19 +17,17 @@ block content
       margin-right: 20px;
       }
   body(style='background-color:lightblue;')
-  form(action="/", method="POST")
-    input(name = "lead_email", type="email", placeholder="Enter you email address: ")
-    button(name='Originalbutton', type='button', style='margin: 16px; padding: 16px; background-color: darkblue; color: aliceblue; border: none;border-radius: 4px;font-size: 12px') Original Schedule 
+  button(name='Originalbutton', type='button', style='margin: 16px; padding: 16px; background-color: darkblue; color: aliceblue; border: none;border-radius: 4px;font-size: 12px') Original Schedule 
 
   button(name='TemplateButton', type='button', style='margin: 16px; padding: 16px; background-color: darkblue; color: aliceblue; border: none;border-radius: 4px;font-size: 12px') Schedule Template 
         
   .flex-container
     #templateArea.flex-child(name='templateArea')
-      | template area 1
+      | Computer Science 4 Year plan
                   
     #templateArea.flex-child(name='originalArea')
-      | template area 2
-      
+      | Computer Science 4 Year plan
+
   script(src='./template.js').
 
   
