--- a/express_app/myapp/views/landing.pug
+++ b/express_app/myapp/views/landing.pug
@@ -26,7 +26,7 @@ block content
       | Computer Science 4 Year plan
                   
     #templateArea.flex-child(name='originalArea')
-      | Computer Science 4 Year plan
+      | Drag and Drop Courses below
 
   script(src='./template.js').
 
